# Pioneer-3-DX-with-ROS-2

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: oak_rgb_only.yaml
launch/: pioneer3_bringup.launch.py  pioneer3_robot.launch.py  pioneer3_sensors.launch.py
pioneer_dashboard_app/: CMakeLists.txt  package.xml
pioneer_dashboard_app/include/pioneer_dashboard_app/: dashboard_window.hpp  lidar_widget.hpp
pioneer_dashboard_app/src/: dashboard_window.cpp  lidar_widget.cpp  main.cpp
pioneer_dashboard_rviz/src/: dashboard_panel.cpp
scripts/: lidar_node.py
src/: bag_recorder.cpp  base_controller.cpp
